[tool.poetry]
name = "secret-fastapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
motor = "^3.3.2"
python-dotenv = "^1.0.0"
passlib = "^1.7.4"
pytest = "^7.4.3"
httpx = "^0.25.2"
pytest-cov = "^4.1.0"
cryptography = "^41.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
